<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable type="com.jonlatane.quizzy.io.EnrolledQuiz"
                  name="enrolledQuiz" />
    </data>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="36sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@{enrolledQuiz.latestInstance.percentCorrect}" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:text="@string/info_last_attempt"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@{enrolledQuiz.average}" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:text="@string/info_average"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@{enrolledQuiz.instanceCount}" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="18sp"
                android:text="@string/info_total_attempts"/>
        </LinearLayout>
    </ScrollView>
</layout>